# bert_cnn

./: README.md  config.py  model.py  predict.py  process.py  pyproject.toml  test.py  train.py  utils.py
data/input/: class.txt
