[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["刘展余 <5524022+liu_chan_yu@user.noreply.gitee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.19"
torch ="^2.4.0"
transformers="^4.43.3"
datasets = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
